# omnixec

./: .gitignore  README.md
backend/: .gitignore  Cargo.toml  old  older
backend/md/: ANALYSIS_SUMMARY.md  API_CHANGES.md  API_DOCUMENTATION.md  API_ROUTES_DOCUMENTATION.md  APPROVAL_IMPLEMENTATION_ROADMAP.md  APPROVAL_VS_MANUAL_COMPARISON.md  AUDIT.md  CODEBASE_ANALYSIS.md  CODE_REFACTORING_GUIDE.md  COMPLETE_PYTH_SMART_CONTRACT_GUIDE.md  Codes.md  DEEP_ANALYSIS_AND_RISK_ASSESSMENT.md  DELIVERY_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOY_NEAR.md  DEPLOY_SOLANA.md  DEPLOY_STELLAR.md  DOCUMENTATION_INDEX copy.md  DOCUMENTATION_INDEX.md  FAULT_ANALYSIS.md  FRONTEND_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  NOTIFICATIONS_SETUP.md  PROJECT_STATUS.md  PYTH_INTEGRATION_AND_CONTRACTS.md  QUICK_REFERENCE copy.md  QUICK_REFERENCE.md  QUOTE_STATUS_LIFECYCLE.md  README_TOKEN_APPROVAL.md  SECURITY_AUDIT_REPORT.md  SETTLEMENT_ARCHITECTURE.md  SMART_CONTRACT_EXECUTION_FLOW.md  SYSTEM_ARCHITECTURE.md  TOKEN_APPROVAL_FLOW.md  TRANSFER_TO_TREASURY_IMPLEMENTATIONS.md  UI_UX_MOCKUPS.md  UNUSED_CODE_ANALYSIS.md  UNUSED_FUNCTIONS_ANALYSIS.md  VERIFICATION_REPORT.md  (+5 more)
backend/md/near-swap/: Cargo.toml  old
backend/md/near-swap/res/: near_swap.wasm
backend/md/near-swap/src/: lib.rs  near_swap.rs
backend/md/solana_swap1/: Anchor.toml
backend/md/solana_swap1/programs/solana_swap1/: Cargo.toml
backend/md/solana_swap1/programs/solana_swap1/src/: lib.rs
backend/md/solana_swap1/tests/: solana_swap1.ts
backend/migrations/: 20251220171924_models.sql  20260105_spending_approvals.sql  20260107_token_approvals.sql
backend/src/: bootstrap.rs  config.rs  error.rs  main.rs  server.rs
backend/src/adapters/: dex_whitelist.rs  mod.rs  registry.rs  traits.rs
backend/src/adapters/dex/: mod.rs  near_dex.rs  phantom_swap.rs  raydium.rs
backend/src/api/: async_webhook.rs  discovery.rs  handler.rs  mod.rs  models.rs  notifications.rs  phase2_quotes.rs  spending_approval.rs  streaming.rs  token_approval.rs  websocket.rs
backend/src/execution/: mod.rs  near.rs  router.rs  signature.rs  solana.rs  stellar.rs
backend/src/funding/: mod.rs
backend/src/ledger/: models.rs  repository.rs
backend/src/middleware/: cors.rs  mod.rs  rate_limit.rs  validation.rs
backend/src/quote_engine/: engine.rs  mod.rs  ohlc.rs  price_cache.rs  pyth_oracle.rs  realtime.rs  slippage.rs
backend/src/risk/: controls.rs  redis_cache.rs
backend/src/routes/: charts.rs  health.rs  mod.rs  quotes.rs  trade.rs  wallet.rs  webhooks.rs
backend/src/settlement/: mod.rs  refiller.rs  scheduler.rs
backend/src/trading/: handlers.rs  mod.rs  models.rs  repository.rs  settlement_bridge.rs
backend/src/wallet/: handlers.rs  mod.rs  models.rs  repository.rs  verification.rs  verifier.rs
contracts/solana-swap/: .gitignore  Cargo.toml  rust-toolchain.toml
contracts/solana-swap/src/: lib.rs  solana.rs
contracts/stellar-swap/: Cargo.toml
contracts/stellar-swap/src/: lib.rs  stellar_swap.rs
frontend/: API_FLOW_GUIDE.md  API_USAGE_ANALYSIS.md  index.html  next.config.js  package-lock.json  (+6 more)
(+43 files in other folders)
