[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde-float"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
stellar_sdk = "0.1.4"
near-jsonrpc-client = "0.20.0"
solana-sdk = "3.0.0"
tokio-stream = "0.1.17"
hex = "0.4.3"
solana-client = "3.0.0"
config = "0.15.19"
ed25519-dalek = "2.2.0"
rust_decimal_macros = "1.39.0"
near-crypto = "0.34.3"
near-primitives = "0.34.3"
stellar-rs = "1.0.0"
stellar-xdr = "25.0.0"
substrate-stellar-sdk = "0.3.0"
sha256 = "1.1"
tower-http = {version = "0.6.8", features = ["full"]}
futures = "0.3.31"
governor = { version = "0.6", features = ["std"] }
validator = { version = "0.16", features = ["derive"] }
near-jsonrpc-primitives = "0.34.3"
parking_lot = "0.12"
rand = "0.9.2"
http = "1.4.0"
tower = "0.5.2"
hyper = "1.8.1"
spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"
solana-system-interface = { version = "1.0", features = ["bincode"] }
borsh = "1.6.0"
sha2 = "0.10.9"
near-token = "0.3.3"

[[bin]]
name = "server"
path = "src/main.rs"
