[package]
name = "solana-swap"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Core Solana 2.x
solana-program = "2.2.0"

# SPL for Solana 2.x
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }

# Serialization
borsh = "1.6.0"

# Optional but common
thiserror = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
litesvm = "0.6.1"
solana-client = "2.2.0"
solana-sdk = "2.2.0"
tokio = "1.49.0"
