[package]
name = "near-swap"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]

near-sdk = "5.0"
borsh = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.149"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true
codegen-units = 1
strip = true
